style fine tuning and horizontal scrollbar fix

--- a/client/sass/components/_content.scss
+++ b/client/sass/components/_content.scss
@@ -16,7 +16,6 @@
 
   .content-view {
     min-height: 100%;
-    width: 100%;
     background: #f3f3f3;
   }
 }
